mvn clean package to jar file